--- a/Shamazon-BackEnd/Shamazon.csproj
+++ b/Shamazon-BackEnd/Shamazon.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseAdmin" Version="2.3.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
-    <PackageReference Include="Stripe.net" Version="41.16.0" />
+    <PackageReference Include="Stripe.net" Version="41.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
